force-app/main/default/objects/Invoice_Policy__mdt/Invoice_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Policy</label>
    <pluralLabel>Invoice Policies</pluralLabel>
</CustomObject>