force-app/main/default/objects/Invoice_Policy__mdt/fields/Allow_Duplicate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Duplicate Invoice</label>
    <type>Checkbox</type>
</CustomField>