force-app/main/default/objects/Invoice_Policy__mdt/fields/Allow_Manual_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Amount_Override__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Manual Amount Override</label>
    <type>Checkbox</type>
</CustomField>