force-app/main/default/objects/Invoice_Policy__mdt/fields/Default_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Status__c</fullName>
    <defaultValue>&quot;Sent&quot;</defaultValue>
    <label>Default Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>