force-app/main/default/objects/Invoice_Policy__mdt/fields/Use_Lease_Monthly_Rent_As_Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Use_Lease_Monthly_Rent_As_Default_Amount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Lease Monthly Rent As Default Amount</label>
    <type>Checkbox</type>
</CustomField>